k8s/nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: socket-test.dev
      http:
        paths:
          - path: /socket
            pathType: Prefix
            backend:
              service:
                name: socket-service
                port:
                  number: 8080
